--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
@@ -67,11 +67,11 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Docentes" >    
+                        <p:menuitem value="Gestionar Componentes interactivos" url="#{siteUrls.componenteInteractiva}" >    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Alumnos">    
+                        <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Cursos">    
+                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}">
                         </p:menuitem>
                     </p:tieredMenu>             
                 </div>
