--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/ver.xhtml
@@ -53,11 +53,11 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Docentes" >    
+                        <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}" >    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Alumnos">    
+                        <p:menuitem value="Gestionar Alumnos" url="#{siteUrls.gestionarAlumnos}">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Cursos">    
+                        <p:menuitem value="Bitacora" url="#{siteUrls.bitacora}">
                         </p:menuitem>
                     </p:tieredMenu>            
                 </div>
