--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -60,7 +60,7 @@
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                   
-                    <p:commandButton value="Registrar Curso" action="#{gestionCursoController.setIndexMenu(1)}" ></p:commandButton>
+                    <p:commandButton value="Adicionar Curso" action="#{gestionCursoController.setIndexMenu(1)}" ></p:commandButton>
                     <p:commandButton value="Refrescar" action="#{gestionCursoController.refresh()}" update="consulta"></p:commandButton>
                 </h:form>
             </p:panel>
