--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/crear.xhtml
@@ -9,7 +9,7 @@
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}"/>
-            <p:menuitem value="Nuevor Expedientes"></p:menuitem>
+            <p:menuitem value="Adicionar Docente"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda1').show();"></i>
@@ -37,27 +37,27 @@
                 <p:focus id="focus" context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="primNombreNuevo" value="Primer Nombre: " class=" Responsive"  ></p:outputLabel>
-                    <p:inputText class="Container100" id="primNombreNuevo"  value="#{gestionarDocentesController.docenteNuevo.dcPrimNombre}" maxlength="#{nombreUtils.nombreMax}" required="true" requiredMessage="Debe ingresar Primer Nombre"></p:inputText>
+                    <p:inputText tabindex="1" class="Container100" id="primNombreNuevo"  value="#{gestionarDocentesController.docenteNuevo.dcPrimNombre}" maxlength="#{nombreUtils.nombreMax}" required="true" requiredMessage="Debe ingresar Primer Nombre"></p:inputText>
                     <p:outputLabel for="segNombreNuevo"  value="Segundo Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="segNombreNuevo" value="#{gestionarDocentesController.docenteNuevo.dcSeguNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
+                    <p:inputText tabindex="2" class="Container100" id="segNombreNuevo" value="#{gestionarDocentesController.docenteNuevo.dcSeguNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
                     <p:outputLabel for="tercNombreNuevo" value="Tercer Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="tercNombreNuevo" value="#{gestionarDocentesController.docenteNuevo.dcTercNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
+                    <p:inputText tabindex="3" class="Container100" id="tercNombreNuevo" value="#{gestionarDocentesController.docenteNuevo.dcTercNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
                     <p:outputLabel for="primApeNuevo" value="Primer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="primApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcPrimApe}" maxlength="#{nombreUtils.apellidoMax}" required="true" requiredMessage="Debe ingresar Primer Apellido"></p:inputText>
+                    <p:inputText tabindex="4" class="Container100" id="primApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcPrimApe}" maxlength="#{nombreUtils.apellidoMax}" required="true" requiredMessage="Debe ingresar Primer Apellido"></p:inputText>
                     <p:outputLabel for="segApeNuevo" value="Segundo Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="segApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcSeguApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
+                    <p:inputText tabindex="5" class="Container100" id="segApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcSeguApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
                     <p:outputLabel for="tercApeNuevo" value="Tercer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="tercApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcTercApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
+                    <p:inputText tabindex="6" class="Container100" id="tercApeNuevo" value="#{gestionarDocentesController.docenteNuevo.dcTercApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
                     <p:outputLabel for="fechNacimNuevo" value="Fecha de Nacimiento: " class=" Responsive"></p:outputLabel>
-                    <p:calendar class="Container100" id="fechNacimNuevo" value="#{gestionarDocentesController.docenteNuevo.dcFechaNacimiento}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar tabindex="7" class="Container100" id="fechNacimNuevo" value="#{gestionarDocentesController.docenteNuevo.dcFechaNacimiento}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="emailNuevo" value="Correo electrónico: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="emailNuevo" type="email" value="#{gestionarDocentesController.docenteNuevo.dcCorreo}"></p:inputText>
+                    <p:inputText  tabindex="8" class="Container100" id="emailNuevo" type="email" value="#{gestionarDocentesController.docenteNuevo.dcCorreo}"></p:inputText>
                     <p:outputLabel for="telefonoNuevo" value="Teléfono: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm1}"  required="true" requiredMessage="Debe ingresar teléfono"></p:inputMask>
+                    <p:inputMask tabindex="9" class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm1}"  required="true" requiredMessage="Debe ingresar teléfono"></p:inputMask>
                     <p:outputLabel for="celularNuevo" value="Celular: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask class="Container100" id="celularNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm2}"></p:inputMask>
+                    <p:inputMask tabindex="10" class="Container100" id="celularNuevo" mask="9999-9999" value="#{gestionarDocentesController.docenteNuevo.dcTelefonoEm2}"></p:inputMask>
                     <p:outputLabel for="direccion" value="Dirección: " class=" Responsive"></p:outputLabel>
-                    <p:inputTextarea class="Container100" id="direccion" value="#{gestionarDocentesController.docenteNuevo.dcDireccion}"></p:inputTextarea>
+                    <p:inputTextarea tabindex="11" class="Container100" id="direccion" value="#{gestionarDocentesController.docenteNuevo.dcDireccion}"></p:inputTextarea>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
@@ -70,15 +70,15 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Docentes" >    
+                        <p:menuitem value="Programacion de clases" url="#{siteUrls.programacionClases}" >    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Alumnos">    
+                        <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.gestionAlumnos}">    
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Cursos">    
+                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}">
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}">
                         </p:menuitem>
                     </p:tieredMenu>
-                    
-                               
                 </div>
             </h:form>
         </p:panel>
