--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -63,7 +63,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
 
-                <p:commandButton value="Registrar Docente" action="#{gestionarDocentesController.setIndexMenu(1)}" ></p:commandButton>
+                <p:commandButton value="Adicionar Docente" action="#{gestionarDocentesController.setIndexMenu(1)}" ></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionarDocentesController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
